2018-11-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (HorizontalFilter, VerticalFilter): quantum is a
	pointer so it's value can not be usefully flushed.  Use a local
	variable and then update quantum pointer when done.

2018-11-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/*: Changed row_count tallying to use 'omp atomic' and
	status update to use 'omp flush' for progress and error
	indication.  This replaces most use of 'omp critical' for this
	purpose.  Changed some lumpy algorithms which were using 'static'
	scheduling to 'guided' scheduling due to observing better results.
	Also added prolific 'restrict' annotations where they were
	missing.

	* www/security.rst: Documented a PGP private key for file signing
	or private correspondence.

2018-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/authors.rst: Moved "Glenn Randers-Pehrson" and "Gregory J
	Wolfe" to the "Former Contributor" category.

2018-11-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Added many GCC function annotations in the libraries and coders.

2018-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Use printf rather than echo to portably expand tab
	requests in configuration summary.

2018-11-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Use pkg-config data as the initial choice when
	configuring for FreeType 2.0 and libxml-2.0.  Only fall back to
	invoking an external script (and then traditional methods) if
	pkg-config fails.

	* coders/msl.c (ProcessMSLScript): Release msl_image if OpenBlob
	fails.  Similar to ImageMagick CVE-2018-18544.  Problem was
	reported to us via email from Petr Gajdos on Thu, 1 Nov 2018.

2018-10-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (WriteMIFFImage): Only run
	strlen(attribute->value) once per attribute since the length won't
	change.  May address oss-fuzz 11158
	"graphicsmagick/coder_MIFF_fuzzer: Timeout in