@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020181114"
-#define public MagickPackageReleaseDate "snapshot-20181114"
+#define public MagickPackageVersionAddendum ".020181115"
+#define public MagickPackageReleaseDate "snapshot-20181115"
