@@ -1,3 +1,8 @@
+2018-11-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/command.c (BenchmarkUsage): Document the benchmark
+	command better.
+
 2018-11-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/resize.c (HorizontalFilter, VerticalFilter): quantum is a
